fixed z-index of the wave

--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -14,7 +14,7 @@
     height: 8rem;
     background: url("../../assets/images/originalWave.png");
     animation: animate 20s linear infinite;
-    z-index: 10;
+    z-index: -1;
     opacity: 1;
     animation-delay: 0s;
     bottom: 0;
@@ -61,11 +61,11 @@
     0 20px 20px rgba(0, 0, 0, 0.15);
 
   &__heading {
-    margin-top: 4.5rem;
+    margin-top: 3rem;
     color: $color-black;
   }
   &__subheading {
-    margin-top: 5rem;
+    margin-top: 3rem;
     color: $color-black;
   }
 }
@@ -116,28 +116,4 @@
       color: $color-black;
     }
   }
-
-  //   .wave {
-  //     position: absolute;
-  //     bottom: 0;
-  //     left: 0;
-  //     width: 100%;
-  //     height: 100px;
-  //     background: url("../../assets/images/wave.png");
-  //     background-size: 1000px 100px;
-  //     animation: animate 20s linear infinite;
-  //     z-index: 10;
-  //     opacity: 1;
-  //     animation-delay: 0s;
-  //     bottom: 0;
-  //   }
-
-  //   @keyframes animate {
-  //     0% {
-  //       background-position-x: 0;
-  //     }
-  //     100% {
-  //       background-position-x: 1000px;
-  //     }
-  //   }
 }
